# peek

./: .gitignore  changelog.md  license.txt  pyproject.toml  readme (Ruud van der Ham's conflicted copy 2024-12-15).md  readme.md
.github/workflows/: ci.yml
peek/: __init__.py  peek.py
tests/: test_peek.py
tools/: install peek.py  peek_embedder.py
