[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "peek-python"
authors = [
    { name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com" },
]
description = "peek - debugging and benchmarking made easy"
version = "24.0.5"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "asttokens>=3.0.0",
    "colorama>=0.4.6",
    "executing>=2.1.0",
    "pyperclip>=1.9.0",
    "six>=1.17.0",
    "tomli>=2.2.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/salabim/peek"
Repository = "https://github.com/salabim/peek"

[tool.setuptools]
packages = [
    "peek",
]

[tool.setuptools.package-data]
"*" = [
    "*.json",
]
