[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "peek-python"
authors = [
    { name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com" },
]
description = "peek - like print, but easy"
version = "26.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asttokens>=3.0.1",
    "colorama>=0.4.6",
    "executing>=2.2.1",
    "six>=1.17.0",
    "tomli>=2.4.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/salabim/peek"
Repository = "https://github.com/salabim/peek"

[tool.setuptools]
packages = [
    "peek",
]

[tool.setuptools.package-data]
"*" = [
    "*.json",
]
